--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
     <title>OhMyFood</title>
     <link rel="stylesheet" href="style.css">
     <script src="https://kit.fontawesome.com/c6b5df462f.js" crossorigin="anonymous"></script>
+    <link rel="preconnect" href="https://fonts.googleapis.com"> 
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin> 
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500&display=swap" rel="stylesheet">
 </head>
 <body>
     <header>
@@ -72,9 +75,6 @@
                 <li>Mentions légales</li>
                 <li>Contact</li>
             </ul>
-           
-
-
         </div>
     </footer>
 </body>
