--- a/index2.html
+++ b/index2.html
@@ -4,11 +4,39 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>OhMyFood</title>
-    <link rel="stylesheet" href="style.css">
+    <title>La palette du goût</title>
+    <link rel="stylesheet" href="./css/menu.css">
     <script src="https://kit.fontawesome.com/c6b5df462f.js" crossorigin="anonymous"></script>
 </head>
 <body>
     <header>
         <img class="logo" src="./images/logo/ohmyfood.png" alt="logo ohmyfood">
     </header>
+    <div class="img">
+        <img src="./images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="La palette du goût">
+    </div>
+    <section class="menus">
+        <div class="menu">
+            <div class="menu-header">
+                <h2 class="menu-header-title">La palette du gout</h2>
+
+            </div>
+
+        </div>
+
+
+    </section>
+    <!--
+    <footer>
+        <div>
+            <h5>ohmyfood</h5>
+            <ul class="list">
+                <li>Proposez un restaurant</li>
+                <li>Devenir partenaire</li>
+                <li>Mentions légales</li>
+                <li>Contact</li>
+            </ul>
+        </div>
+    </footer>-->
+</body>
+</html>
