--- a/index.html
+++ b/index.html
@@ -5,11 +5,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>OhMyFood</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="./css/main.css">
     <script src="https://kit.fontawesome.com/c6b5df462f.js" crossorigin="anonymous"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com"> 
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin> 
-    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,300;0,400;0,500;0,700;1,300;1,400;1,500&amp;display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Shrikhand&amp;display=swap" rel="stylesheet">
 </head>
 <body>
     <header>
@@ -33,38 +34,79 @@
                 <li> <i class=" store fas fa-store"></i>Dégustez au restaurant</li>
             </ol>
         </section>
-        <section class="menus">
-            <div class="sub-menu">
-                <a href="#" class="card">
-                    <article class="card-image">
-                       <!-- <img src="./images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="la palette française">-->
-                        <h3><p>La palette française</h3>
-                    </article>
-                    <div class="card-description"></div>
+        <section class="restaurant">
+            <h4 class="restaurant-title">Restaurants</h4>
+            <div class="restaurant-cards">
+                <a href="#">
+                    <div class="resto_card">
+                        <div class="resto_card-image">
+                            <img src="./images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="la palette du goût">
+                        </div>
+                        <div class="restaurant-block">
+                            <div class="restaurant-block-info">
+                                <div class="restaurant-block-name">
+                                    La palette du goût
+                                </div>
+                                <div class="restaurant-block-city">
+                                    Menilmontant
+                                </div>
+                            </div>
+                        </div>
+                    </div>
                 </a>
-                <a href="#" class="card">
-                    <article class="card-image">
-                       <!-- <img src="./images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg" alt="La note enchantée">-->
-                        <h3>La note enchantée</h3>
-                    </article>
-                    <div class="card-description"></div>
+                <a href="#">
+                    <div class="resto_card">
+                        <div class="resto_card-image">
+                            <img src="./images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg" alt="la note enchantée">
+                        </div>
+                        <div class="restaurant-block">
+                            <div class="restaurant-block-info">
+                                <div class="restaurant-block-name">
+                                    La note enchantée
+                                </div>
+                                <div class="restaurant-block-city">
+                                    Charonne
+                                </div>
+                            </div>
+                        </div>
+                    </div>
                 </a>
-                <a href="#" class="card">
-                    <article class="card-image">
-                       <!-- <img src="./images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="A la française"> -->
-                        <h3>A la française</h3>
-                    </article>
-                    <div class="card-description"></div>
+                <a href="#">
+                    <div class="resto_card">
+                        <div class="resto_card-image">
+                            <img src="./images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="A la française">
+                        </div>
+                        <div class="restaurant-block">
+                            <div class="restaurant-block-info">
+                                <div class="restaurant-block-name">
+                                    A la française
+                                </div>
+                                <div class="restaurant-block-city">
+                                    Cité Rouge
+                                </div>
+                            </div>
+                        </div>
+                    </div>
                 </a>
-                <a href="#" class="card">
-                    <article class="card-image">
-                        <!--<img src="./images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg" alt="Le délice des sens">-->
-                        <h3>Le délice des sens</h3>
-                    </article>
-                    <div class="card-description"></div>
+                <a href="#">
+                    <div class="resto_card">
+                        <div class="resto_card-image">
+                            <img src="./images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg" alt="le délice des sens">
+                        </div>
+                        <div class="restaurant-block">
+                            <div class="restaurant-block-info">
+                                <div class="restaurant-block-name">
+                                    Le délice des sens
+                                </div>
+                                <div class="restaurant-block-city">
+                                   Folie-Méricourt
+                                </div>
+                            </div>
+                        </div>
+                    </div>
                 </a>
             </div>
-        </section>
+     </section>
     </main> 
     <footer>
         <div>
