--- a/index.html
+++ b/index.html
@@ -27,17 +27,30 @@
             <button class="btn">Explorer nos restaurants</button>
         </section>
         <section class="working">
-            <h3>Fonctionnement</h3>
-            <ol>
-                <li> <i class=" mobile fas fa-mobile-alt"></i>Choisissez un restaurant</li>
-                <li> <i class=" list fas fa-list-ul"></i>Composez votre menu</li>
-                <li> <i class=" store fas fa-store"></i>Dégustez au restaurant</li>
-            </ol>
-        </section>
+            <div class="container">
+              <h2 class="working_title">Fonctionnement</h2>
+              <div class="working__steps">
+                <div class="working__step">
+                    <div class="working_number">1</div>
+                  <i class="working__icon fas fa-mobile-alt"></i>
+                  <span class="text">Choisissez un restaurant</span>
+                </div>
+                <div class="working__step">
+                    <div class="working_number">2</div>
+                  <i class="working__icon fas fa-list-ul"></i>
+                  <span class="text">Composez votre menu</span>
+                </div>
+                <div class="working__step">
+                    <div class="working_number">3</div>
+                  <i class="working__icon fas fa-store"></i>
+                  <span class="text">Dégustez au restaurant</span>
+                </div>
+            </div>
+          </section>
         <section class="restaurant">
-            <h4 class="restaurant-title">Restaurants</h4>
+            <h3 class="restaurant-title">Restaurants</h3>
             <div class="restaurant-cards">
-                <a href="#">
+                <a href="Lapalettedugout.html">
                     <div class="resto_card">
                         <div class="resto_card-image">
                             <img src="./images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="la palette du goût">
@@ -109,15 +122,19 @@
      </section>
     </main> 
     <footer>
-        <div>
-            <h5>ohmyfood</h5>
-            <ul class="list">
-                <li>Proposez un restaurant</li>
-                <li>Devenir partenaire</li>
-                <li>Mentions légales</li>
-                <li>Contact</li>
-            </ul>
-        </div>
+        <h4>Ohmyfood</h4>
+        <p>
+            <i class="fas fa-utensils"></i>
+            proposer un restaurant
+        </p>
+        <p>
+            <i class="fas fa-hands-helping"></i>
+            Devenir partenaire
+        </p>
+        <p>Mentions légales</p>
+        <p>
+            <a href="mailto:san-martin@live.fr">Contact</a>
+        </p>
     </footer>
 </body>
 </html>
