ajout et changement html page menu

--- a/Lapalettedugout.html
+++ b/Lapalettedugout.html
@@ -26,11 +26,22 @@
                         <h1>Entrées</h1>
                     </div>
                     <div class="menu-grid-case">
-                        
+                        <div class="menu-grid-case-sub">
+                            <div class="dish-and-price">
+                                <div class="menu-case-dish">
+                                    <div class="menu-case-dish-title">
+                                        <p>Fricassée d'escargot</p>
+                                        <div class="menu-case-dish-subtitle">
+                                            <p>Au piment d'Espelette</p>
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="menu-case-price">25€</div>
+                            </div>
+                        </div>
                     </div>
                 </div>
             </section>
-
         </div>
 
 
