--- a/Lapalettedugout.html
+++ b/Lapalettedugout.html
@@ -26,19 +26,43 @@
                         <h1>Entrées</h1>
                     </div>
                     <div class="menu-grid-case">
-                        <div class="menu-grid-case-sub">
-                            <div class="dish-and-price">
-                                <div class="menu-case-dish">
-                                    <div class="menu-case-dish-title">
-                                        <p>Fricassée d'escargot</p>
-                                        <div class="menu-case-dish-subtitle">
-                                            <p>Au piment d'Espelette</p>
-                                        </div>
-                                    </div>
-                                </div>
-                                <div class="menu-case-price">25€</div>
+                        <div class="dish-and-price">
+                            <div class="dish-and-price-case">
+                            <div class="dish-and-price-title">
+                                <p>Fricassée d'escargot</p>
+                            </div>
+                            <div class="dish-and-price-subtitle">
+                                <p>Au piment d'espelette</p>
+                            </div>
                             </div>
                         </div>
+                        <div class="price">25€</div>
+                    </div>
+                    <div class="menu-grid-case">
+                        <div class="dish-and-price">
+                            <div class="dish-and-price-case">
+                            <div class="dish-and-price-title">
+                                <p>Fricassée d'escargot</p>
+                            </div>
+                            <div class="dish-and-price-subtitle">
+                                <p>Au piment d'espelette</p>
+                            </div>
+                            </div>
+                        </div>
+                        <div class="price">25€</div>
+                    </div>
+                    <div class="menu-grid-case">
+                        <div class="dish-and-price">
+                            <div class="dish-and-price-case">
+                            <div class="dish-and-price-title">
+                                <p>Fricassée d'escargot</p>
+                            </div>
+                            <div class="dish-and-price-subtitle">
+                                <p>Au piment d'espelette</p>
+                            </div>
+                            </div>
+                        </div>
+                        <div class="price">25€</div>
                     </div>
                 </div>
             </section>
