--- a/index.html
+++ b/index.html
@@ -12,6 +12,9 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin> 
 </head>
 <body>
+    <div class="loader">
+        <span class="loader-quart"></span>
+    </div>
     <header>
         <img class="logo" src="./images/logo/ohmyfood.png" alt="logo ohmyfood">
     </header>
@@ -50,7 +53,7 @@
             <h3 class="restaurant-title">Restaurants</h3>
             <div class="restaurant-cards">
                 <a href="Lapalettedugout.html">
-                    <div class="resto_card">
+                    <div class="resto_card new">
                         <div class="resto_card-image">
                             <img src="./images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="la palette du goût">
                         </div>
@@ -67,7 +70,7 @@
                     </div>
                 </a>
                 <a href="#">
-                    <div class="resto_card">
+                    <div class="resto_card new">
                         <div class="resto_card-image">
                             <img src="./images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg" alt="la note enchantée">
                         </div>
@@ -84,7 +87,7 @@
                     </div>
                 </a>
                 <a href="#">
-                    <div class="resto_card">
+                    <div class="resto_card new">
                         <div class="resto_card-image">
                             <img src="./images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="A la française">
                         </div>
@@ -101,7 +104,7 @@
                     </div>
                 </a>
                 <a href="#">
-                    <div class="resto_card">
+                    <div class="resto_card new">
                         <div class="resto_card-image">
                             <img src="./images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg" alt="le délice des sens">
                         </div>
