solve problem padding restaurant

--- a/index.html
+++ b/index.html
@@ -65,6 +65,9 @@
                                 <div class="restaurant-block-city">
                                     Menilmontant
                                 </div>
+                                <div class="restaurant-block-heart">
+                                    <i class="fa-solid fa-heart"></i>
+                                </div>
                             </div>
                         </div>
                     </div>
