desktop problem solve

--- a/Lapalettedugout.html
+++ b/Lapalettedugout.html
@@ -21,56 +21,140 @@
                 <h2 class="menu-header-title">A la française</h2>
             </div>
             <section class="grid">
+                <div class="grid-title">
+                    <h3>Entrées</h3>
+                </div>
                 <div class="menu-grid-bloc">
-                    <div class="menu-grid-title">
-                        <h1>Entrées</h1>
-                    </div>
-                    <div class="menu-grid-case">
                         <div class="dish-and-price">
-                            <div class="dish-and-price-case">
+                            <div class="menu-case-dish">
                             <div class="dish-and-price-title">
-                                <p>Fricassée d'escargot</p>
+                                <h4>fricassée d'escargot</h4>
                             </div>
                             <div class="dish-and-price-subtitle">
                                 <p>Au piment d'espelette</p>
                             </div>
                             </div>
+                            <p class="price">25€</p>
                         </div>
-                        <div class="price">25€</div>
+                </div>
+                <div class="menu-grid-bloc">
+                    <div class="dish-and-price">
+                        <div class="menu-case-dish">
+                        <div class="dish-and-price-title">
+                            <h4>Foie gras de canard mi-cuit</h4>
+                        </div>
+                        <div class="dish-and-price-subtitle">
+                            <p>Et ses copeaux de truffe noire</p>
+                        </div>
+                        </div>
+                        <p class="price">35€</p>
                     </div>
-                    <div class="menu-grid-case">
-                        <div class="dish-and-price">
-                            <div class="dish-and-price-case">
-                            <div class="dish-and-price-title">
-                                <p>Fricassée d'escargot</p>
-                            </div>
-                            <div class="dish-and-price-subtitle">
-                                <p>Au piment d'espelette</p>
-                            </div>
-                            </div>
-                        </div>
-                        <div class="price">25€</div>
+            </div>
+            <div class="menu-grid-bloc">
+                <div class="dish-and-price">
+                    <div class="menu-case-dish">
+                    <div class="dish-and-price-title">
+                        <h4>Oeuf au plat</h4>
                     </div>
-                    <div class="menu-grid-case">
-                        <div class="dish-and-price">
-                            <div class="dish-and-price-case">
-                            <div class="dish-and-price-title">
-                                <p>Fricassée d'escargot</p>
-                            </div>
-                            <div class="dish-and-price-subtitle">
-                                <p>Au piment d'espelette</p>
-                            </div>
-                            </div>
+                    <div class="dish-and-price-subtitle">
+                        <p>Assaisonné à la truffe sur le lit de caviar</p>
+                    </div>
+                    </div>
+                    <p class="price">20€</p>
+                </div>
+        </div>
+                <div class="grid-title">
+                    <h3>Plats</h3>
+                </div>
+                <div class="menu-grid-bloc">
+                    <div class="dish-and-price">
+                        <div class="menu-case-dish">
+                        <div class="dish-and-price-title">
+                            <h4>Filet de boeufs au herbes</h4>
                         </div>
-                        <div class="price">25€</div>
+                        <div class="dish-and-price-subtitle">
+                            <p>Accompagné de sa ribambelle de légumes</p>
+                        </div>
+                        </div>
+                        <p class="price">40€</p>
                     </div>
                 </div>
+                <div class="menu-grid-bloc">
+                    <div class="dish-and-price">
+                        <div class="menu-case-dish">
+                        <div class="dish-and-price-title">
+                            <h4>Parmentier de queue de boeuf</h4>
+                        </div>
+                        <div class="dish-and-price-subtitle">
+                            <p>A la truffe noire sur sa purée de panais</p>
+                        </div>
+                        </div>
+                        <p class="price">35€</p>
+                    </div>
+            </div>
+            <div class="menu-grid-bloc">
+                <div class="dish-and-price">
+                    <div class="menu-case-dish">
+                    <div class="dish-and-price-title">
+                        <h4>Filet de turbot</h4>
+                    </div>
+                    <div class="dish-and-price-subtitle">
+                        <p>Aux agrumes</p>
+                    </div>
+                    </div>
+                    <p class="price">44€</p>
+                </div>
+        </div>
+                <div class="grid-title">
+                    <h3>Desserts</h3>
+                </div>
+                <div class="menu-grid-bloc">
+                    <div class="dish-and-price">
+                        <div class="menu-case-dish">
+                        <div class="dish-and-price-title">
+                            <h4>Paris-brest</h4>
+                        </div>
+                        <div class="dish-and-price-subtitle">
+                            <p>Revisité</p>
+                        </div>
+                        </div>
+                        <p class="price">18€</p>
+                    </div>
+                </div> 
+                <div class="menu-grid-bloc">
+                    <div class="dish-and-price">
+                        <div class="menu-case-dish">
+                        <div class="dish-and-price-title">
+                            <h4>Macaron au chocolat d'exception</h4>
+                        </div>
+                        <div class="dish-and-price-subtitle">
+                            <p>Et glace à la vanille de Madagascar</p>
+                        </div>
+                        </div>
+                        <p class="price">22€</p>
+                    </div>
+            </div>
+            <div class="menu-grid-bloc">
+                <div class="dish-and-price">
+                    <div class="menu-case-dish">
+                    <div class="dish-and-price-title">
+                        <h4>Mousse au chocolat</h4>
+                    </div>
+                    <div class="dish-and-price-subtitle">
+                        <p>Au piment d'espelette et à la truffe noire</p>
+                    </div>
+                    </div>
+                    <p class="price">23€</p>
+                </div>
+        </div>  
             </section>
         </div>
-
+    </section>
+    <section class="command">
+        <button class="btn">Commander</button>
 
     </section>
-    <!--<footer>
+    <footer>
         <h4>Ohmyfood</h4>
         <p>
             <i class="fas fa-utensils"></i>
@@ -82,8 +166,8 @@
         </p>
         <p>Mentions légales</p>
         <p>
-            <a href="mailto:san-martin@live.fr">Contact</a>
+            <a href="mailto:contact@ohmyfood.fr">Contact</a>
         </p>
-    </footer>-->
+    </footer>
 </body>
 </html>
