--- a/index.html
+++ b/index.html
@@ -6,10 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Ohmyfood</title>
     <link rel="stylesheet" href="./css/main.css">
-    <link rel="stylesheet" href="./css/desktop.css">
     <script src="https://kit.fontawesome.com/c6b5df462f.js" crossorigin="anonymous"></script>
-    <link rel="preconnect" href="https://fonts.googleapis.com"> 
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin> 
 </head>
 <body>
     <div class="loader">
@@ -66,7 +63,7 @@
                                     Menilmontant
                                 </div>
                                 <div class="restaurant-block-heart">
-                                    <i class="fa-solid fa-heart"></i>
+                                    <i class="fa-thin fa-heart"></i>
                                 </div>
                             </div>
                         </div>
@@ -138,7 +135,7 @@
         </p>
         <p>Mentions légales</p>
         <p>
-            <a href="mailto:san-martin@live.fr">Contact</a>
+            <a href="mailto:contact@ohmyfood.fr">Contact</a>
         </p>
     </footer>
 </body>
