--- a/Lapalettedugout.html
+++ b/Lapalettedugout.html
@@ -9,6 +9,9 @@
     <script src="https://kit.fontawesome.com/c6b5df462f.js" crossorigin="anonymous"></script>
 </head>
 <body>
+    <div class="loader">
+        <span class="loader-quart"></span>
+    </div>
     <header>
         <img class="logo" src="./images/logo/ohmyfood.png" alt="logo ohmyfood">
     </header>
@@ -152,7 +155,6 @@
     </section>
     <section class="command">
         <button class="btn">Commander</button>
-
     </section>
     <footer>
         <h4>Ohmyfood</h4>
