--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
                                     Menilmontant
                                 </div>
                                 <div class="restaurant-block-heart">
-                                    <i class="fa-thin fa-heart"></i>
+                                    <i class="fa-regular fa-heart"></i>
                                 </div>
                             </div>
                         </div>
