--- a/Lapalettedugout.html
+++ b/Lapalettedugout.html
@@ -39,6 +39,7 @@
                             </div>
                             <p class="price">25€</p>
                         </div>
+                        <div class="menu-check">check</div>
                 </div>
                 <div class="menu-grid-bloc">
                     <div class="dish-and-price">
