changement grid et changement pour animation

--- a/Lapalettedugout.html
+++ b/Lapalettedugout.html
@@ -13,6 +13,11 @@
         <span class="loader-quart"></span>
     </div>
     <header>
+        <div class="arrow-back">
+            <a href="index.html">
+            <i class="fas fa-arrow-left"></i>
+            </a>
+        </div>
         <img class="logo" src="./images/logo/ohmyfood.png" alt="logo ohmyfood">
     </header>
     <div class="img">
@@ -39,7 +44,9 @@
                             </div>
                             <p class="price">25€</p>
                         </div>
-                        <div class="menu-check">check</div>
+                        <div class="menu-check">
+                            <i class="fa-solid fa-circle-check"></i>
+                        </div>
                 </div>
                 <div class="menu-grid-bloc">
                     <div class="dish-and-price">
