--- a/Lapalettedugout.html
+++ b/Lapalettedugout.html
@@ -161,9 +161,9 @@
             </section>
         </div>
     </section>
-    <section class="command">
+    <div class="command">
         <button class="btn">Commander</button>
-    </section>
+    </div>
     <footer>
         <h4>Ohmyfood</h4>
         <p>
