--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
             <h1>Paris, Belleville</h1>
         </div>
         <section class="Explorer">
-            <h2>Réservez le menu qui <br> vous convient</br></h2>
+            <h2>Réservez le menu qui<br>vous convient</br> </h2>
             <p>Découvrez des restaurants d'exception, séléctionnés par nos soins</p>
             <button class="btn">Explorer nos restaurants</button>
         </section>
@@ -45,7 +45,8 @@
                   <span class="text">Dégustez au restaurant</span>
                 </div>
             </div>
-          </section>
+            </div>
+        </section>
         <section class="restaurant">
             <h3 class="restaurant-title">Restaurants</h3>
             <div class="restaurant-cards">
@@ -87,10 +88,11 @@
                     </div>
                 </a>
                 <a href="#">
+                    <div class="resto_card new">
                         <div class="resto_card-image">
                             <img src="./images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="A la française">
                         </div>
-                        <div class="restaurant-block">
+                        <div class="restaurant-block2">
                             <div class="restaurant-block-info">
                                 <div class="restaurant-block-name">
                                     A la française
@@ -100,12 +102,14 @@
                                 </div>
                             </div>
                         </div>
+                    </div>
                 </a>
                 <a href="#">
+                    <div class="resto_card new">
                         <div class="resto_card-image">
                             <img src="./images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg" alt="le délice des sens">
                         </div>
-                        <div class="restaurant-block">
+                        <div class="restaurant-block2">
                             <div class="restaurant-block-info">
                                 <div class="restaurant-block-name">
                                     Le délice des sens
@@ -115,6 +119,7 @@
                                 </div>
                             </div>
                         </div>
+                    </div>
                 </a>
             </div>
      </section>
