--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
             <h1>Paris, Belleville</h1>
         </div>
         <section class="Explorer">
-            <h2>Réservez le menu qui<br>vous convient</br> </h2>
+            <h2>Réservez le menu qui vous convient</h2>
             <p>Découvrez des restaurants d'exception, séléctionnés par nos soins</p>
             <button class="btn">Explorer nos restaurants</button>
         </section>
