--- a/Lanoteenchantée.html
+++ b/Lanoteenchantée.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>La palette du goût</title>
+    <title>La note enchantée</title>
     <link rel="stylesheet" href="./css/menu.css">
     <script src="https://kit.fontawesome.com/c6b5df462f.js" crossorigin="anonymous"></script>
 </head>
@@ -21,16 +21,13 @@
         <img class="logo" src="./images/logo/ohmyfood.png" alt="logo ohmyfood">
     </header>
     <div class="img">
-        <img class="img_image" src="./images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="La palette du goût">
+        <img class="img_image" src="./images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg" alt="La note enchantée">
     </div>
     <section class="menus">
         <div class="menu">
             <div class="menu-header">
-                <h2 class="menu-header-title">La palette a du goût</h2>
-                <i class="far fa-heart"></i>
-                <i class="fas fa-heart"></i>
+                <h2 class="menu-header-title">La note enchantée</h2>
             </div>
-               
             <section class="grid">
                 <div class="grid-bloc">
                 <div class="grid-title">
@@ -40,10 +37,10 @@
                         <div class="dish-and-price">
                             <div class="menu-case-dish">
                             <div class="dish-and-price-title">
-                                <h4>fricassée d'escargot</h4>
+                                <h4>Ravioles de foie gras</h4>
                             </div>
                             <div class="dish-and-price-subtitle">
-                                <p>Au piment d'espelette</p>
+                                <p>Accompagnés de leur crème à la truffe</p>
                             </div>
                             </div>
                             <p class="price">25€</p>
@@ -58,10 +55,10 @@
                     <div class="dish-and-price">
                         <div class="menu-case-dish">
                         <div class="dish-and-price-title">
-                            <h4>Foie gras de canard mi-cuit</h4>
+                            <h4>Caviar osciètre</h4>
                         </div>
                         <div class="dish-and-price-subtitle">
-                            <p>Et ses copeaux de truffe noire</p>
+                            <p>Sur blini à la farine de blé noir</p>
                         </div>
                         </div>
                         <p class="price">35€</p>
@@ -71,28 +68,46 @@
                             <i class="fa-check fas menu-item-icon"></i>
                         </div>
                     </div>
+            </div>
+            <div class="menu-grid-bloc">
+                <div class="dish-and-price">
+                    <div class="menu-case-dish">
+                    <div class="dish-and-price-title">
+                        <h4>Homard et espuma de potiron</h4>
+                    </div>
+                    <div class="dish-and-price-subtitle">
+                        <p>Mariné aux zestes d'orange</p>
+                    </div>
+                    </div>
+                    <p class="price">20€</p>
                 </div>
-                <div class="menu-grid-bloc">
-                    <div class="dish-and-price">
-                        <div class="menu-case-dish">
-                        <div class="dish-and-price-title">
-                            <h4>Oeuf au plat</h4>
-                        </div>
-                        <div class="dish-and-price-subtitle">
-                            <p>Assaisonné à la truffe sur le lit de caviar</p>
-                        </div>
-                        </div>
-                        <p class="price">20€</p>
+                <div class="menu-check-confirmation">
+                    <div class="menu-item">
+                        <i class="fa-check fas menu-item-icon"></i>
                     </div>
-                    <div class="menu-check-confirmation">
-                        <div class="menu-item">
-                            <i class="fa-check fas menu-item-icon"></i>
-                        </div>
-                    </div>
-                 </div>
-                 </div>
-                 <div class="grid-bloc">
-                 <div class="grid-title">
+                </div>
+        </div>
+        <div class="menu-grid-bloc">
+            <div class="dish-and-price">
+                <div class="menu-case-dish">
+                <div class="dish-and-price-title">
+                    <h4>Foie gras de canard cuit entier</h4>
+                </div>
+                <div class="dish-and-price-subtitle">
+                    <p>Confiture de figue et pain toasté</p>
+                </div>
+                </div>
+                <p class="price">35€</p>
+            </div>
+            <div class="menu-check-confirmation">
+                <div class="menu-item">
+                    <i class="fa-check fas menu-item-icon"></i>
+                </div>
+            </div>
+            </div>
+            </div>
+            <div class="grid-bloc">
+                <div class="grid-title">
                     <h3>Plats</h3>
                 </div>
                 <div class="menu-grid-bloc">
@@ -120,7 +135,7 @@
                             <h4>Parmentier de queue de boeuf</h4>
                         </div>
                         <div class="dish-and-price-subtitle">
-                            <p>A la truffe noire sur sa purée de panée</p>
+                            <p>A la truffe noire sur sa purée de panais</p>
                         </div>
                         </div>
                         <p class="price">35€</p>
@@ -130,27 +145,27 @@
                             <i class="fa-check fas menu-item-icon"></i>
                         </div>
                     </div>
-                </div>
-                <div class="menu-grid-bloc">
-                    <div class="dish-and-price">
-                        <div class="menu-case-dish">
-                        <div class="dish-and-price-title">
-                            <h4>Filet de turbot</h4>
-                        </div>
-                        <div class="dish-and-price-subtitle">
-                            <p>Aux agrumes</p>
-                        </div>
-                        </div>
-                        <p class="price">44€</p>
+            </div>
+            <div class="menu-grid-bloc">
+                <div class="dish-and-price">
+                    <div class="menu-case-dish">
+                    <div class="dish-and-price-title">
+                        <h4>Filet de turbot</h4>
                     </div>
-                    <div class="menu-check-confirmation">
-                        <div class="menu-item">
-                            <i class="fa-check fas menu-item-icon"></i>
-                        </div>
+                    <div class="dish-and-price-subtitle">
+                        <p>Aux agrumes</p>
+                    </div>
+                    </div>
+                    <p class="price">44€</p>
+                </div>
+                <div class="menu-check-confirmation">
+                    <div class="menu-item">
+                        <i class="fa-check fas menu-item-icon"></i>
                     </div>
                 </div>
-                 </div>
-                 <div class="grid-bloc">
+        </div>
+        </div>
+        <div class="grid-bloc">
                 <div class="grid-title">
                     <h3>Desserts</h3>
                 </div>
