--- a/Ledelicedessens.html
+++ b/Ledelicedessens.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>La palette du goût</title>
+    <title>Le délice des sens</title>
     <link rel="stylesheet" href="./css/menu.css">
     <script src="https://kit.fontawesome.com/c6b5df462f.js" crossorigin="anonymous"></script>
 </head>
@@ -21,12 +21,12 @@
         <img class="logo" src="./images/logo/ohmyfood.png" alt="logo ohmyfood">
     </header>
     <div class="img">
-        <img class="img_image" src="./images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="La palette du goût">
+        <img class="img_image" src="./images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg" alt="Le délice des sens">
     </div>
     <section class="menus">
         <div class="menu">
             <div class="menu-header">
-                <h2 class="menu-header-title">La palette a du goût</h2>
+                <h2 class="menu-header-title">Le délice des sens</h2>
                 <i class="far fa-heart"></i>
                 <i class="fas fa-heart"></i>
             </div>
@@ -40,10 +40,10 @@
                         <div class="dish-and-price">
                             <div class="menu-case-dish">
                             <div class="dish-and-price-title">
-                                <h4>fricassée d'escargot</h4>
+                                <h4>Tartare de thon</h4>
                             </div>
                             <div class="dish-and-price-subtitle">
-                                <p>Au piment d'espelette</p>
+                                <p>Assaisonné au yuzu</p>
                             </div>
                             </div>
                             <p class="price">25€</p>
@@ -58,10 +58,10 @@
                     <div class="dish-and-price">
                         <div class="menu-case-dish">
                         <div class="dish-and-price-title">
-                            <h4>Foie gras de canard mi-cuit</h4>
+                            <h4>Bouchée de homard croustillant</h4>
                         </div>
                         <div class="dish-and-price-subtitle">
-                            <p>Et ses copeaux de truffe noire</p>
+                            <p>Et sa faradaole de petits légumes</p>
                         </div>
                         </div>
                         <p class="price">35€</p>
@@ -76,10 +76,10 @@
                     <div class="dish-and-price">
                         <div class="menu-case-dish">
                         <div class="dish-and-price-title">
-                            <h4>Oeuf au plat</h4>
+                            <h4>Velouté de cèpes</h4>
                         </div>
                         <div class="dish-and-price-subtitle">
-                            <p>Assaisonné à la truffe sur le lit de caviar</p>
+                            <p>Aux truffes</p>
                         </div>
                         </div>
                         <p class="price">20€</p>
@@ -99,10 +99,10 @@
                     <div class="dish-and-price">
                         <div class="menu-case-dish">
                         <div class="dish-and-price-title">
-                            <h4>Filet de boeufs au herbes</h4>
+                            <h4>Poulet rôti aux herbes de provences</h4>
                         </div>
                         <div class="dish-and-price-subtitle">
-                            <p>Accompagné de sa ribambelle de légumes</p>
+                            <p>Et sa crème de truffe</p>
                         </div>
                         </div>
                         <p class="price">40€</p>
@@ -117,10 +117,10 @@
                     <div class="dish-and-price">
                         <div class="menu-case-dish">
                         <div class="dish-and-price-title">
-                            <h4>Parmentier de queue de boeuf</h4>
+                            <h4>Langouste rôtie</h4>
                         </div>
                         <div class="dish-and-price-subtitle">
-                            <p>A la truffe noire sur sa purée de panée</p>
+                            <p>Et ses légumes de saison</p>
                         </div>
                         </div>
                         <p class="price">35€</p>
@@ -135,10 +135,10 @@
                     <div class="dish-and-price">
                         <div class="menu-case-dish">
                         <div class="dish-and-price-title">
-                            <h4>Filet de turbot</h4>
+                            <h4>Côte de boeuf angus</h4>
                         </div>
                         <div class="dish-and-price-subtitle">
-                            <p>Aux agrumes</p>
+                            <p>Et sa purée de panais</p>
                         </div>
                         </div>
                         <p class="price">44€</p>
@@ -149,8 +149,8 @@
                         </div>
                     </div>
                 </div>
-                 </div>
-                 <div class="grid-bloc">
+                </div>
+                <div class="grid-bloc">
                 <div class="grid-title">
                     <h3>Desserts</h3>
                 </div>
@@ -158,10 +158,10 @@
                     <div class="dish-and-price">
                         <div class="menu-case-dish">
                         <div class="dish-and-price-title">
-                            <h4>Paris-brest</h4>
+                            <h4>Farandole de desserts</h4>
                         </div>
                         <div class="dish-and-price-subtitle">
-                            <p>Revisité</p>
+                            <p>Du chef</p>
                         </div>
                         </div>
                         <p class="price">18€</p>
@@ -176,10 +176,10 @@
                     <div class="dish-and-price">
                         <div class="menu-case-dish">
                         <div class="dish-and-price-title">
-                            <h4>Macaron au chocolat d'exception</h4>
+                            <h4>Crème brulée</h4>
                         </div>
                         <div class="dish-and-price-subtitle">
-                            <p>Et glace à la vanille de Madagascar</p>
+                            <p>Revisité</p>
                         </div>
                         </div>
                         <p class="price">22€</p>
@@ -194,10 +194,10 @@
                 <div class="dish-and-price">
                     <div class="menu-case-dish">
                     <div class="dish-and-price-title">
-                        <h4>Mousse au chocolat</h4>
+                        <h4>Tiramisu</h4>
                     </div>
                     <div class="dish-and-price-subtitle">
-                        <p>Au piment d'espelette et à la truffe noire</p>
+                        <p>A la noisette</p>
                     </div>
                     </div>
                     <p class="price">23€</p>
