--- a/index.html
+++ b/index.html
@@ -22,110 +22,83 @@
         </div>
         <section class="Explorer">
             <h2>Réservez le menu qui vous convient</h2>
-            <p>Découvrez des restaurants d'exception, séléctionnés par nos soins</p>
+            <p>Découvrez des restaurants d'exception, séléctionnez par nos soins</p>
             <button class="btn">Explorer nos restaurants</button>
         </section>
         <section class="working">
             <div class="container">
-              <h2 class="working_title">Fonctionnement</h2>
-              <div class="working__steps">
-                <div class="working__step">
-                    <div class="working_number">1</div>
-                  <i class="working__icon fas fa-mobile-alt"></i>
-                  <span class="text">Choisissez un restaurant</span>
-                </div>
-                <div class="working__step">
-                    <div class="working_number">2</div>
-                  <i class="working__icon fas fa-list-ul"></i>
-                  <span class="text">Composez votre menu</span>
-                </div>
-                <div class="working__step">
-                    <div class="working_number">3</div>
-                  <i class="working__icon fas fa-store"></i>
-                  <span class="text">Dégustez au restaurant</span>
-                </div>
-            </div>
-            </div>
+                <h2 class="working_title">Fonctionnement</h2>
+                <div class="working__steps">
+                  <div class="working__step">
+                      <div class="working_number">1</div>
+                    <i class="working__icon fas fa-mobile-alt"></i>
+                    <span class="text">Choisissez un restaurant</span>
+                  </div>
+                  <div class="working__step">
+                      <div class="working_number">2</div>
+                    <i class="working__icon fas fa-list-ul"></i>
+                    <span class="text">Composez votre menu</span>
+                  </div>
+                  <div class="working__step">
+                      <div class="working_number">3</div>
+                    <i class="working__icon fas fa-store"></i>
+                    <span class="text">Dégustez au restaurant</span>
+                  </div>
+              </div>
+              </div>
         </section>
         <section class="restaurant">
-            <h3 class="restaurant-title">Restaurants</h3>
-            <div class="restaurant-cards">
-                <a href="Lapalettedugout.html">
-                    <div class="resto_card new">
-                        <div class="resto_card-image">
-                            <img src="./images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="la palette du goût">
-                        </div>
-                        <div class="restaurant-block">
-                            <div class="restaurant-block-info">
-                                <div class="restaurant-block-name">
-                                    La palette du goût
-                                </div>
-                                <div class="restaurant-block-city">
-                                    Menilmontant
-                                </div>
-                                <div class="restaurant-block-heart">
-                                    <i class="fa-regular fa-heart"></i>
-                                </div>
-                            </div>
-                        </div>
+            <h3>Restaurants</h3>
+            <div class="restaurant-block">
+                <a href="Lapalettedugout.html" class="restaurant-card new">
+                    <div class="card-image">
+                        <img src="./images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="la palette du goût">
+                    </div>
+                    <div class="card-description">
+                        <h4>La palette du goût</h4>
+                        <p>Menilmontant</p>
+                        <i class="far fa-heart"></i>
+                        <i class="fas fa-heart"></i>
                     </div>
                 </a>
-                <a href="#">
-                    <div class="resto_card new">
-                        <div class="resto_card-image">
-                            <img src="./images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg" alt="la note enchantée">
-                        </div>
-                        <div class="restaurant-block">
-                            <div class="restaurant-block-info">
-                                <div class="restaurant-block-name">
-                                    La note enchantée
-                                </div>
-                                <div class="restaurant-block-city">
-                                    Charonne
-                                </div>
-                            </div>
-                        </div>
+                <a href="Lanoteenchantée.html" class="restaurant-card new">
+                    <div class="card-image">
+                        <img src="./images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg" alt="la note enchantée">
+                    </div>
+                    <div class="card-description">
+                        <h4>La note enchantée</h4>
+                        <p>Charonne</p>
+                        <i class="far fa-heart"></i>
+                        <i class="fas fa-heart"></i>
                     </div>
                 </a>
-                <a href="#">
-                    <div class="resto_card new">
-                        <div class="resto_card-image">
-                            <img src="./images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="A la française">
-                        </div>
-                        <div class="restaurant-block2">
-                            <div class="restaurant-block-info">
-                                <div class="restaurant-block-name">
-                                    A la française
-                                </div>
-                                <div class="restaurant-block-city">
-                                    Cité Rouge
-                                </div>
-                            </div>
-                        </div>
+                <a href="Alafrançaise.html" class="restaurant-card">
+                    <div class="card-image">
+                        <img src="./images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="A la française">
+                    </div>
+                    <div class="card-description">
+                        <h4>A la française</h4>
+                        <p>Cité Rouge</p>
+                        <i class="far fa-heart"></i>
+                        <i class="fas fa-heart"></i>
                     </div>
                 </a>
-                <a href="#">
-                    <div class="resto_card new">
-                        <div class="resto_card-image">
-                            <img src="./images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg" alt="le délice des sens">
-                        </div>
-                        <div class="restaurant-block2">
-                            <div class="restaurant-block-info">
-                                <div class="restaurant-block-name">
-                                    Le délice des sens
-                                </div>
-                                <div class="restaurant-block-city">
-                                   Folie-Méricourt
-                                </div>
-                            </div>
-                        </div>
+                <a href="Ledelicedessens.html" class="restaurant-card">
+                    <div class="card-image">
+                        <img src="./images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg" alt="le délice des sens">
+                    </div>
+                    <div class="card-description">
+                        <h4>Le délice des sens</h4>
+                        <p>Folie-Méricourt</p>
+                        <i class="far fa-heart"></i>
+                        <i class="fas fa-heart"></i>
                     </div>
                 </a>
             </div>
-     </section>
-    </main> 
+        </section>
+    </main>
     <footer>
-        <h4>Ohmyfood</h4>
+        <h5>Ohmyfood</h5>
         <p>
             <i class="fas fa-utensils"></i>
             proposer un restaurant
@@ -138,6 +111,6 @@
         <p>
             <a href="mailto:contact@ohmyfood.fr">Contact</a>
         </p>
-    </footer>
+    </footer> 
 </body>
 </html>
