--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
       <span class="loader-quart"></span>
     </div>
     <header>
-      <img class="logo" src="./images/logo/ohmyfood.png" alt="logo ohmyfood" />
+      <img class="logo" src="./images/logo/ohmyfood.png" alt="logo ohmyfood">
     </header>
     <main>
       <div class="city">
