--- a/Lanoteenchantée.html
+++ b/Lanoteenchantée.html
@@ -1,15 +1,12 @@
 <!DOCTYPE html>
 <html lang="fr">
   <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>La note enchantée</title>
-    <link rel="stylesheet" href="./css/menu.css" />
-    <script
-      src="https://kit.fontawesome.com/c6b5df462f.js"
-      crossorigin="anonymous"
-    ></script>
+    <link rel="stylesheet" href="./css/menu.css">
+    <script src="https://kit.fontawesome.com/c6b5df462f.js" crossorigin="anonymous"></script>
   </head>
   <body>
     <div class="loader">
@@ -21,14 +18,10 @@
           <i class="fas fa-arrow-left"></i>
         </a>
       </div>
-      <img class="logo" src="./images/logo/ohmyfood.png" alt="logo ohmyfood" />
+      <img class="logo" src="./images/logo/ohmyfood.png" alt="logo ohmyfood">
     </header>
     <div class="img">
-      <img
-        class="img_image"
-        src="./images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg"
-        alt="La note enchantée"
-      />
+      <img class="img_image" src="./images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg" alt="La note enchantée">
     </div>
     <section class="menus">
       <div class="menu">
